- started add svg sprite

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -250,7 +250,7 @@ $pout:17px;
 	}
 
 	.tile-s__img{
-		background:url('../image/layer-2.png') no-repeat center top /cover;
+		background:url('../image/layer-2.jpg') no-repeat center top /cover;
 	}
 	.tile-s__cont{
 		border-top:3px solid $yellow;
