--- a/src/scss/_banner.scss
+++ b/src/scss/_banner.scss
@@ -1,4 +1,3 @@
-// формы
 
 .form-Head{
 	width: 100%;
@@ -13,7 +12,6 @@
 		flex-direction:column;
 		align-items: center;
 	}
-	
 }
 .heading{
 	width: 100%;
@@ -43,11 +41,7 @@
 	&__button{
 		margin-top: 29px;
 		margin-bottom: 20px;
-
 	}
-
-	
-	
 }
 .select{
 	display: flex;
@@ -64,6 +58,35 @@
 	font-size: 18px;
 	font-weight: 400;
 	line-height: 50px;
+}
+.exper{
+	font-size: 0;
+}
+.iconSprite{
+	padding: 3px;
+	fill:rgb(255, 134, 249);
+	height: 30px;
+	width: 50px;
+	background-color: rgba(0, 0, 0, 0.164);
+}
+.starIcon{
+	height: 30px;
+	width: 50px;
+	fill:none;
+	stroke:#ea9e2b;
+	stroke-width:0.36252287;
+	stroke-linecap:round;
+	&:hover{
+		fill:#ea9e2b;
+		stroke:#ea9e2b*1.2;
+
+	}
+}
+.starFill{
+	fill:#ea9e2b;
+	stroke:#ea9e2b;
+	stroke-width:0.36252287;
+	stroke-linecap:round;
 }
 
 
