--- a/src/scss/_banner.scss
+++ b/src/scss/_banner.scss
@@ -1,4 +1,3 @@
-
 .form-Head{
 	width: 100%;
 	min-height: 376px;
@@ -60,7 +59,6 @@
 	line-height: 50px;
 }
 
-//--end sprite-------------------------------------------------------
 .districs, .educat{
 	position: relative;
 	min-width: 220px;
@@ -69,35 +67,39 @@
 		margin: 0;
 		padding: 0;
 		border-top: none;
-		display: none;
+		height: 0px;
+		overflow: hidden;
 		position: absolute;
 		top: 50px;
 		left:0;z-index: 20;;
+		transition: height 0.5s ease;
 		&__item{
 			width: 220px;
-			list-style: none;
 			cursor: pointer;
 			background-position: 10px -119px;
 			border: 1px solid rgba(255, 255, 255, 0.2);
 			border-top:none;
 			background-color: rgba(77, 77, 77, 0.98);
 			box-sizing: border-box;
+			@include text_item;
+			color: #96a6a7;
+			padding-left:30px;
+			position: relative;
+
 			&:last-child{
 			border-radius:0 0 25px 25px;
 			}
 			&:hover {
 				background-color:  rgba(66, 66, 66, 0.95);
-				color: #222;
+				color: rgb(196, 196, 196);
 			}
 		}
-		&__link {
-			@include text_item;
-			padding-left:25px;
-			position: relative;
+		&-active{
+			height: 500px;
+			transition: height 0.5s ;
 		}
-	
 	}
-.slct>.drop__link{
+.slct>.drop__item{
 	padding-left:0;
 }
 .slct {
@@ -115,6 +117,8 @@
 	white-space:nowrap;
 	text-overflow: ellipsis;
 	-o-text-overflow: ellipsis;
+	transition: border 0.5s;
+	transition-delay: 0.5s;
 	&::before {
 		content: '';
 		display: inline-block;
@@ -134,7 +138,7 @@
 	
 .active {
 	border-radius: 25px 25px 0 0;
-
+	transition-delay: initial;
 }
 .arrow-hover{
 		&:hover .slct::before{
@@ -153,17 +157,9 @@
 	border: 1px solid rgba(255, 255, 255, 0.2);
 	background-color: rgba(255, 255, 255, 0.05);
 	outline:none;
-
 	overflow: hidden;
 	white-space:nowrap;
 	text-overflow: ellipsis;
-	-o-text-overflow: ellipsis;	
-
-
-	&::-webkit-input-placeholder{color:#fff;}
-	&::-moz-placeholder         {color:#fff;}
-	&:-moz-placeholder          {color:#fff;}
-	&:-ms-input-placeholder     {color:#fff;}
 	box-sizing: border-box;
 }
 
@@ -199,7 +195,7 @@
 		&:active{
 			box-shadow: inset 0 -2px 0 rgba(193, 66, 46, 0.726),
 			inset 0 0 40px rgba(255, 255, 255, 0.7);
-			transition: 0.2s;
+			// transition: 0.2s;
 
 		}
 	}
@@ -207,11 +203,11 @@
 .hover-white{
 	&:hover{
 		box-shadow: 0 0 15px hsla(0, 0%, 43%, 0.6);
-		transition: all 0.2s,
+		transition: box-shadow 0.2s,
 	}
 	&:focus{
 		box-shadow: 0 0 15px hsla(0, 0%, 43%, 0.6);
-		transition: all 0.2s,
+		transition: box-shadow 0.2s,
 	}
 }
 
