--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -143,7 +143,7 @@ $pout:17px;
 		stroke-linecap:round;
 		&:hover{
 			fill:#ffffff;
-			stroke:#dadada*1.2;
+			stroke:#f3f3f3;
 		}
 		&:active{
 			fill:#d3d3d3;
@@ -598,7 +598,6 @@ $pout:17px;
 	text-align: center;
 	margin-right: auto;
 	margin-left: auto;
-	background: url(../image/icon/arrow_icon.svg) no-repeat 130px 9px/16px 7px;
 
 	&:hover{
 		text-shadow: 0 0 2px rgba(36, 36, 36, 0.3);
@@ -607,10 +606,19 @@ $pout:17px;
 		transition: all 0.3s;
 	}
 }
-.arrow{
+.arrow_icon{
+	height: 9px;
+	fill: #566375;
 	text-decoration: none;
 	position: relative;
-	bottom:5px;
+	bottom:21px;
+	transition: all 0.5s;
+	&:hover{
+		transition: all 0.8s;
+		fill: #566375*0.8;
+
+		margin-left:15px;
+	}
 }
 @media screen and (max-width: 900px) {
 	.tile-s{
